Fix layout on mobile

--- a/sites/.common/src/scss/_box.scss
+++ b/sites/.common/src/scss/_box.scss
@@ -4,13 +4,8 @@
 $date-box-size: 5.5rem;
 $date-box-size-large: 6.5rem;
 
-.box {
-  margin-right: $box-shadow-size;
-}
-
 .box.has-no-shadow {
   box-shadow: none;
-  margin-right: 0;
 }
 
 .box.is-date-box {
