--- a/sites/.common/src/scss/_navbar.scss
+++ b/sites/.common/src/scss/_navbar.scss
@@ -67,10 +67,13 @@
 }
 
 // expanded menu decoration
-.navbar-menu.is-active {
+.navbar.is-active {
   border-bottom: 0.2rem solid $fire;
   box-shadow: 0 0.25rem 0 0 $charcoal;
+}
 
+// expanded menu after dots
+.navbar-menu.is-active {
   .navbar-item {
     // show dot not only when on hover
     @include after-dot(0.4rem, $fire);
