--- a/sites/landing/src/scss/main.scss
+++ b/sites/landing/src/scss/main.scss
@@ -29,6 +29,10 @@
 .box.is-list-item {
   min-height: $date-box-size;
 
+  @include mobile {
+    padding: 1.2rem 0.75rem !important;
+  }
+
   h3 a:hover {
     color: inherit;
     position: relative;
@@ -39,6 +43,10 @@
 .article {
   line-height: 32px;
   font-size: 1.2rem;
+}
+
+.section-body {
+  padding: 0 0.75rem;
 }
 
 .mr-2rem {
